# xorg__app__glxcompmgr

./: .cvsignore  .gitignore  ChangeLog  INSTALL  Makefile.am  README  configure.ac
include/: Makefile.am  comp.h  region.h
plugins/: Makefile.am  cube.c  expose.c  fade.c  gconf.c  rotate.c  shadow.c  wobbly.c  zoom.c
src/: .gitignore  Makefile.am  display.c  event.c  glxcompmgr.c  option.c  paint.c  plugin.c  privates.c  readpng.c  screen.c  texture.c  window.c
